# quoridor

./: '  Cargo.toml  readme.md
assets/: index.html
doc/: quoridor-boardstate-diagram.drawio
platform/: Cargo.toml
quoridor-core/: Cargo.toml
quoridor-core/src/: actions.rs  boardstate.rs  gamestate.rs  lib.rs  locations.rs  main.rs  visualize.rs
quoridor-core/src/boardstate/: locations.rs  mod.rs
quoridor-platform/: Cargo.toml
quoridor-platform/src/: game.rs  main.rs  player.rs
