[package]
name = "quoridor-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
quoridor-core = { path = "../quoridor-core" }

axum = { version = "0.7.9", features = ["ws"] }
tower-http = { version = "0.6.2", features = ["fs"]}

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    # "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
